--- a/EXERCICIO/ex026/mq002/estilos/paisagem.css
+++ b/EXERCICIO/ex026/mq002/estilos/paisagem.css
@@ -1,2 +1,9 @@
 @charset "utf-8";
 /* Aparelho deitado (landscape)*/
+
+body {
+    background: url(../imagens/cev-landscape.jpg);
+    background-position: left bottom;
+    background-attachment: fixed;
+    background-size: cover;
+}
