--- a/EXERCICIO/ex026/mq002/estilos/retrato.css
+++ b/EXERCICIO/ex026/mq002/estilos/retrato.css
@@ -1,3 +1,11 @@
 @charset "utf-8";
 
 /* Aparelho em pé (portrait)*/
+
+body {
+    background: url(../imagens/cev-portrait.jpg);
+    background-position: center bottom;
+    background-size: contain;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+}
